# living-documentation-cookbook

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  mise.toml
.claude/: settings.json
.claude/hooks/: protect-claude-md.sh
backing_services/: .description  docker-compose.yml
backing_services/init_scripts/: init.sql
claude-md-autoupdate/: .description  claude_md_config.py  generate_claude_md.py
coolcover_company/: .description  pyproject.toml
coolcover_company/src/coolcover_company/: entities.py  main.py
docs/: .description
docs/data_contracts/: main.py
docs/data_contracts/generated_docs/Departments/: department_specification.html  department_specification.json
docs/rest_api/: openapi.json
docs/schemaspy/: schemaspy.properties  schemaspy.properties.template
