[project]
name = "coolcover-company"
version = "0.1.0"
description = ""
authors = [
    { name = "Mehdi-H", email = "mehdi.houacine7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
    "json-schema-for-humans>=1.4.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coolcover_company"]
