[project]
name = "coolcover-company"
version = "0.1.0"
description = ""
authors = [
    { name = "Mehdi-H", email = "mehdi.houacine7@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
    "json-schema-for-humans>=1.5.1",
]

[dependency-groups]
dev = [
    "pip>=25.0",
    "ruff>=0.14.6",
    "setuptools>=80.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coolcover_company"]
