[project]
name = "coolcover-company"
version = "0.1.0"
description = ""
authors = [
    { name = "Mehdi-H", email = "mehdi.houacine7@gmail.com" }
]
requires-python = ">=3.13"

dependencies = [
    "fastapi<1.0",
    "pydantic<3.0",
    "uvicorn<1.0",
    "json-schema-for-humans<2.0",
]

[dependency-groups]
dev = [
    "pip>=26.0",
    "ruff<1.0",
    "setuptools>=82.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
exclude-newer = "1 week"

[tool.hatch.build.targets.wheel]
packages = ["src/coolcover_company"]
